# Full-Stack-Todo-Web-Application

./: .gitignore  404.html  GITHUB_PAGES_ENV_SETUP.md  README.md  index.html  index.txt  init.sql  nginx.conf  package-lock.json  package.json  pyproject.toml  tmpclaude-9141-cwd
.claude/: settings.local.json
.claude/agents/: backend-architect.md  frontend-architect.md
.github/workflows/: github-pages-main.yml  github-pages.yml  test.yml
.specify/memory/: constitution.md
404/: index.html
auth/: index.html  index.txt
auth/signin/: index.html  index.txt
auth/signup/: index.html  index.txt
backend/: CLAUDE.md  alembic.ini  api.py  database.py  main.py  pytest.ini  requirements.txt  test_db_connection.py  vercel.json
backend/alembic/: env.py  script.py.mako
backend/api/: auth.py  dependencies.py  index.py  tasks.py
backend/auth/: middleware.py  utils.py
backend/cache/: cache_service.py
backend/middleware/: performance.py
backend/models/: task.py  user.py
backend/services/: task_service.py  user_service.py
backend/src/: config.py  database.py  main.py
backend/tests/: conftest.py  test_auth.py  test_basic.py  test_security.py  test_tasks.py
dashboard/: index.html  index.txt
docs/: 404.html  index.html  index.txt  quickstart.md
docs/404/: index.html
docs/auth/: index.html  index.txt
docs/dashboard/: index.html  index.txt
frontend/: CLAUDE.md  next.config.js  package.json  tsconfig.json
history/adr/: adr-1-multi-phase-task-organization.md
specs/01-todo-web-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+104 files in other folders)
